# ETL

./: .env.example  .gitignore  README.md  architecture.excalidraw  pyproject.toml  test.py
src/: main.py  test.py
src/classes/: etl.py  task.py  worker.py
src/dashboards/: __init__.py  control_enfermeria.py  facturacion.py  ingreso_pacientes.py
src/entities/: various.py  warehouse.py  worker.py
src/tools/: dashboards.py  logger.py  utils.py
src/utils/: config.py  db.py
src/utils/dashboards/: control_enfermeria.py  ingreso_pacientes.py  planta_de_personal.py  test.py  test2.py  test3.py  test4.py
src/utils/entities/: db.py  worker.py
src/utils/static/: tables.csv
src/utils/tools/: custom_print.py
static/: kactus-tables.csv  tables.csv  test-tables.csv
